--- a/css/style.css
+++ b/css/style.css
@@ -647,7 +647,7 @@ nav ul li:hover {
   margin-bottom: 10px;
 }
 
-.discount__percent {
+.discount__percent, .attribution a {
   background: rgba(255, 125, 26, 0.2);
   color: #ff7d1a;
   font-weight: 700;
@@ -782,6 +782,27 @@ nav ul li:hover {
 
 .attribution {
   position: absolute;
-  bottom: 0;
+  bottom: 5px;
+  right: 10px;
+  font-size: 12px;
+  opacity: 0.7;
+  color: black;
+}
+
+.attribution::before {
+  content: "\00A9";
+  font-size: 20px;
+}
+
+.attribution a {
+  font-size: inherit;
+  text-decoration: none;
+  -webkit-transition: background 0.3s linear, color 200ms linear;
+  transition: background 0.3s linear, color 200ms linear;
+}
+
+.attribution a:hover {
+  background: rgba(255, 125, 26, 0.5);
+  color: white;
 }
 /*# sourceMappingURL=style.css.map */
